# Akairo

./: README.md  pyproject.toml
src/dspy_local_optimizer/core/: metrics.py  ollama.py
src/dspy_local_optimizer/optimizers/: guideline_optimizer.py
